--- a/waybar/style.css
+++ b/waybar/style.css
@@ -53,7 +53,7 @@ window .layout {
 
 #workspaces button {
   background-color: #222;
-  color: rgba(78, 81, 111, 0.5);
+  color: rgba(250, 250, 250, 0.6);
   border-radius: 6px;
 }
 
@@ -73,6 +73,12 @@ window .layout {
   background-color: rgb(65, 99, 105);
   border: 2px solid rgba(20, 130, 200, 1);
   color: rgba(211, 212, 220, 1);
+  font-weight: bold;
+}
+
+#workspaces button.active {
+  background-color: rgba(78, 81, 111, 1);
+  color: rgb(250, 250, 250);
   font-weight: bold;
 }
 
