--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,7 +5,7 @@
   margin-right: 5px;
   margin-left: 0px;
   font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  font-size: 12px;
   /* border-radius: 10px; */
 }
 
@@ -46,9 +46,9 @@ window .layout {
 
 #workspaces {
   background-color: transparent;
-  border: 1px solid rgb(250, 250, 250);
+  /* border: 1px solid rgb(250, 250, 250); */
   border-radius: 4px;
-  padding: 4px;
+  /* padding: 2px; */
 }
 
 #workspaces button {
@@ -135,7 +135,7 @@ button:hover {
 
 #window,
 #hyprland-workspaces {
-  margin: 0 4px;
+  /* margin: 0 2px; */
   border-radius: 10px;
 }
 
@@ -390,7 +390,7 @@ menuitem {
 
 #mpd {
   font-size: 1rem;
-  min-width: 400px;
+  min-width: 398px;
   background-color: rgba(10, 10, 10, 0.8);
   color: rgba(78, 81, 111, 1);
   border: 1px solid rgba(78, 81, 111, 1);
