--- a/waybar/style.css
+++ b/waybar/style.css
@@ -82,12 +82,6 @@ window .layout {
   font-weight: bold;
 }
 
-#workspaces button.active {
-  background-color: rgba(78, 81, 111, 1);
-  color: rgb(250, 250, 250);
-  font-weight: bold;
-}
-
 #workspaces button.urgent {
   background-color: #eb4d4b;
 }
@@ -107,8 +101,52 @@ button:hover {
 }
 
 /* you can set a style on hover for any module like this */
+
+#pulseaudio {
+  background-color: black;
+  border-radius: 6px 0px 0px 6px;
+  color: rgba(20, 130, 200, 1);
+  margin: 0;
+  padding: 6px;
+}
+
+#pulseaudio.muted {
+  background-color: #90b1b1;
+  color: #2a5c45;
+}
 #pulseaudio:hover {
   background-color: #a37800;
+}
+
+#pulseaudio-slider {
+  padding: 0;
+  margin: 0;
+  background: black;
+}
+#pulseaudio-slider slider {
+  min-height: 0px;
+  min-width: 0px;
+  opacity: 0;
+  padding: 0;
+  margin: 0;
+  background-image: none;
+  border: none;
+  box-shadow: none;
+}
+#pulseaudio-slider trough {
+  min-height: 10px;
+  min-width: 80px;
+  border-radius: 5px;
+  padding: 0;
+  margin: 0;
+  background: black;
+}
+#pulseaudio-slider highlight {
+  min-width: 0px;
+  border-radius: 5px;
+  background: rgba(20, 130, 200, 1);
+  margin: 0;
+  padding: 0;
 }
 
 #clock,
@@ -119,7 +157,7 @@ button:hover {
 #temperature,
 #backlight,
 #network,
-#pulseaudio,
+/* #pulseaudio, */
 #wireplumber,
 #custom-media,
 #tray,
@@ -240,17 +278,6 @@ label:focus {
 
 #network.disconnected {
   color: red;
-}
-
-#pulseaudio {
-  background-color: rgb(219, 166, 7);
-  border-radius: 6px;
-  color: rgb(82, 78, 74);
-}
-
-#pulseaudio.muted {
-  background-color: #90b1b1;
-  color: #2a5c45;
 }
 
 #wireplumber {
